--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               class="item-image"
             />
             <div class="item-name">
-              <p class="name">Daniel Clifford</p>
+              <h1 class="name">Daniel Clifford</h1>
               <span class="status">Verified Graduate</span>
             </div>
           </div>
@@ -56,7 +56,7 @@
               class="item-image"
             />
             <div class="item-name">
-              <p class="name">Jonathan Walters</p>
+              <h1 class="name">Jonathan Walters</h1>
               <span class="status">Verified Graduate</span>
             </div>
           </div>
@@ -78,7 +78,7 @@
               class="item-image"
             />
             <div class="item-name">
-              <p class="name">Jeanette Harmon</p>
+              <h1 class="name">Jeanette Harmon</h1>
               <span class="status">Verified Graduate</span>
             </div>
           </div>
@@ -99,7 +99,7 @@
               class="item-image"
             />
             <div class="item-name">
-              <p class="name">Patrick Abrams</p>
+              <h1 class="name">Patrick Abrams</h1>
               <span class="status">Verified Graduate</span>
             </div>
           </div>
@@ -122,7 +122,7 @@
           <div class="item-head">
             <img src="images\image-kira.jpg" alt="avatar" class="item-image" />
             <div class="item-name">
-              <p class="name">Kira Whittle</p>
+              <h1 class="name">Kira Whittle</h1>
               <span class="status">Verified Graduate</span>
             </div>
           </div>
