--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
       <div class="grid-container">
         <!--Item One-->
         <div class="item1 item-no">
-          <figure class="item-head">
+          <div class="item-head">
             <img
               src="images\image-daniel.jpg"
               alt="avatar"
               class="item-image"
             />
-            <figcaption class="item-name">
-              <p class="name">Daniel Clifford</p>
-              <p class="status">Verified Graduate</p>
-            </figcaption>
-          </figure>
+            <div class="item-name">
+              <h1 class="name">Daniel Clifford</h1>
+              <span class="status">Verified Graduate</span>
+            </div>
+          </div>
           <p class="achievement">
             I received a job offer mid-course, and the subjects I learned were
             current, if not more so, in the company I joined. I honestly feel I
